Fix template dsign and creare translation catalog

--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -2,9 +2,9 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
-    <title id='home_title'>{{ gettext(Welcome to Holberton) }}</title>
+    <title>{{ _('home_title') }}</title>
   </head>
 
   <body>
-    <h1 id='home_header'>{{ gettext(Hello world) }}</h1>
+    <h1>{{ _('home_header') }}</h1>
   </body>
