--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>{{ _('home_header') }}</h1>
     {% if 'user' in g.__dict__ %}
-      <p>{{ _('logged_in_as') }}</p>
+      <p>{{ _('logged_in_as', username=g.user['name']) }}</p>
     {% else %}
       <p>{{ _('not_logged_in') }}</p>
     {% endif %}
